# PurpleHole

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
assets/levels/: level0-future.lvl  level0-past.lvl  level0-present.lvl
assets/levels_backup/: level0-future.lvl  level0-past.lvl  level0-present.lvl
include/: CMakeLists.txt
include/classes/: animation.hpp  collisions.hpp  entities.hpp  interface.hpp  pausemenu.hpp  tilemap.hpp
include/core/: assets.hpp  engine.hpp  imageHandle.hpp  keybinds.hpp  utils.hpp
include/main/: editor.hpp  game.hpp  menu.hpp
src/: CMakeLists.txt  main.cpp
src/classes/: animation.cpp  collisions.cpp  entities.cpp  interface.cpp  pausemenu.cpp  tilemap.cpp
src/core/: assets.cpp  engine.cpp  imageHandle.cpp  keybinds.cpp  utils.cpp
src/main/: editor.cpp  game.cpp  menu.cpp
